--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,10 @@ jobs:
     needs: [checksecret, integration]
     if: needs.checksecret.outputs.is_MY_SECRET_set == 'false'
     runs-on: ubuntu-16.04
-    name: E2E on Ubuntu
+    container:
+      image: cypress/browsers:node12.16.1-chrome80-ff73
+      options: --user 1001
+    name: E2E Simple on Ubuntu
     strategy:
       fail-fast: false
       matrix:
@@ -118,6 +121,9 @@ jobs:
       VUE_APP_FIREBASE_PROJECT_ID:  ${{ secrets.VUE_APP_FIREBASE_PROJECT_ID }}
       VUE_APP_STORAGE_BUCKET:  ${{ secrets.VUE_APP_STORAGE_BUCKET }}
     runs-on: ubuntu-16.04
+    container:
+      image: cypress/browsers:node12.16.1-chrome80-ff73
+      options: --user 1001
     name: E2E on Ubuntu
     strategy:
       fail-fast: false
