--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,11 @@ jobs:
     needs: [checksecret, integration]
     if: needs.checksecret.outputs.is_MY_SECRET_set == 'false'
     runs-on: ubuntu-16.04
-    name: E2E on Ubuntu
+    name: E2E Simple on Ubuntu
     strategy:
       fail-fast: false
       matrix:
-        browsers: [chrome, firefox]
+        browsers: [chrome]
     steps:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
@@ -123,7 +123,7 @@ jobs:
       fail-fast: false
       matrix:
         containers: [1, 2, 3, 4]
-        browsers: [chrome, firefox]
+        browsers: [chrome]
     steps:
       - uses: actions/checkout@v1
       - uses: cypress-io/github-action@v2
