ci: git push tags

--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -11,4 +11,4 @@ jobs:
       - run: git config --global user.name 'GitHub Actions Bot'
       - run: git config --global user.email '<>'
       - run: npm version patch
-      - run: git push
+      - run: git push --tags
