fix: service worker _redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,8 @@
 
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
