--- a/.env.dist
+++ b/.env.dist
@@ -10,3 +10,4 @@ VUE_APP_FIREBASE_APP_ID=YOUR_FIREBASE_APP_ID
 VUE_APP_FIREBASE_MEASUREMENT_ID=YOUR_FIREBASE_MEASUREMENT_ID
 
 VUE_APP_LIST_MAPS_JSON_URL=https://maps.geoguess.games/maps.json
+#VUE_APP_PUBLIC_PATH="/path"
