--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "test": "npm run lint && npm run test:unit && npm run test:e2e",
-        "test:unit": "vue-cli-service test:unit",
+        "test:unit": "NODE_OPTIONS=--unhandled-rejections=warn  vue-cli-service test:unit",
         "test:e2e": "cypress run",
         "cypress": "cypress",
         "lint": "vue-cli-service lint"
