--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "test": "npm run lint && npm run test:unit && npm run test:e2e",
-        "test:unit": "NODE_OPTIONS=--unhandled-rejections=warn  vue-cli-service test:unit",
+        "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn  vue-cli-service test:unit",
         "test:e2e": "cypress run",
         "cypress": "cypress",
         "lint": "vue-cli-service lint"
@@ -42,6 +42,7 @@
         "@vue/test-utils": "^1.1.2",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.3",
+        "cross-env": "^7.0.3",
         "cypress": "^9.3.1",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.15.0",
