--- a/.github/workflows/ci-mutation-testing.yml
+++ b/.github/workflows/ci-mutation-testing.yml
@@ -1,8 +1,9 @@
 name: CI mutation
 
 on:
-    workflow_dispatch:
-    push:
+  workflow_dispatch:
+  schedule:
+  - cron: "0 2 * * 0"
       
 
 jobs:
