--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest] # , macos-latest, windows-latest
-        node: [12]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Set git to use LF
@@ -43,7 +42,7 @@ jobs:
       if: matrix.os != 'windows-latest'
       with:
         path: ~/.npm          
-        key: ${{ matrix.os }}-node-v${{ matrix.node }}-deps-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ matrix.os }}-node-deps-${{ hashFiles('**/package-lock.json') }}
     - name: Get npm cache directory
       id: npm-cache
       if: matrix.os == 'windows-latest'
@@ -73,7 +72,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ matrix.os }}-node-v${{ matrix.node }}-build
+        name: ${{ matrix.os }}-node-build
         path: dist
 
 
@@ -98,6 +97,7 @@ jobs:
           browser: ${{matrix.browsers}}
           spec: |
             tests/e2e/specs/homePage.test.js
+          wait-on-timeout: 500
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
@@ -135,6 +135,7 @@ jobs:
           group: ${{matrix.browsers}}
           tag: ${{ github.event_name }}
           browser: ${{matrix.browsers}}
+          wait-on-timeout: 500
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }}
