chore: migrate vue plugin to 5

--- a/package.json
+++ b/package.json
@@ -1,84 +1,87 @@
 {
-    "name": "geoguess",
-    "version": "0.7.2",
-    "description": "GeoGuess is an open-source geography game with Google Map StreetView.",
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "test": "npm run lint && npm run test:unit && npm run test:e2e",
-        "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vue-cli-service test:unit",
-        "test:mutation": "cross-env NODE_OPTIONS=--unhandled-rejections=warn BABEL_ENV=test VUE_CLI_TRANSPILE_BABEL_RUNTIME=true VUE_CLI_BABEL_TARGET_NODE=true VUE_CLI_BABEL_TRANSPILE_MODULES=true stryker run",
-        "test:e2e": "cypress run",
-        "cypress": "cypress",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "@turf/bbox": "^6.5.0",
-        "@turf/boolean-point-in-polygon": "^6.5.0",
-        "@turf/distance": "^6.5.0",
-        "@turf/helpers": "^6.1.4",
-        "axios": "^0.21.4",
-        "axios-cache-adapter": "^2.7.3",
-        "firebase": "^8.10.1",
-        "gmap-vue": "^1.5.0",
-        "random-position-in-polygon": "^1.0.6",
-        "register-service-worker": "^1.7.2",
-        "vue": "^2.6.14",
-        "vue-axios": "^3.4.1",
-        "vue-clipboard2": "^0.3.3",
-        "vue-country-flag": "^2.3.2",
-        "vue-i18n": "^8.27.2",
-        "vue-router": "^3.5.4",
-        "vuetify": "^2.6.7",
-        "vuex": "^3.6.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.18.9",
-        "@stryker-mutator/core": "^6.0.2",
-        "@stryker-mutator/jest-runner": "^6.1.2",
-        "@vue/cli-plugin-babel": "^3.12.1",
-        "@vue/cli-plugin-eslint": "^4.5.19",
-        "@vue/cli-plugin-pwa": "^4.5.19",
-        "@vue/cli-plugin-unit-jest": "^4.5.19",
-        "@vue/cli-service": "^4.5.19",
-        "@vue/test-utils": "^1.1.2",
-        "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.2.3",
-        "cross-env": "^7.0.3",
-        "cypress": "^10.3.1",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-vue": "^8.7.1",
-        "jest-google-maps-mock": "^1.0.7",
-        "prettier": "2.7.1",
-        "react-is": "^18.2.0",
-        "sass": "1.32",
-        "sass-loader": "^8.0.2",
-        "vue-cli-plugin-vuetify": "^2.5.1",
-        "vue-template-compiler": "^2.6.14",
-        "vuetify-loader": "^1.7.3"
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions"
-    ],
-    "keywords": [
-        "game",
-        "geography",
-        "educational-game",
-        "multiplayer-game",
-        "street-view"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/GeoGuess/GeoGuess.git"
-    },
-    "author": "Bilel Jegham and others",
-    "bugs": {
-        "url": "https://github.com/GeoGuess/Geoguess/issues"
-    },
-    "homepage": "https://github.com/GeoGuess/Geoguess#readme",
-    "license": "MIT"
+  "name": "geoguess",
+  "version": "0.7.2",
+  "description": "GeoGuess is an open-source geography game with Google Map StreetView.",
+  "author": "Bilel Jegham and others",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vue-cli-service test:unit",
+    "test:e2e": "cypress run",
+    "lint": "vue-cli-service lint",
+    "cypress": "cypress",
+    "test": "npm run lint && npm run test:unit && npm run test:e2e",
+    "test:mutation": "cross-env NODE_OPTIONS=--unhandled-rejections=warn BABEL_ENV=test VUE_CLI_TRANSPILE_BABEL_RUNTIME=true VUE_CLI_BABEL_TARGET_NODE=true VUE_CLI_BABEL_TRANSPILE_MODULES=true stryker run"
+  },
+  "dependencies": {
+    "@turf/bbox": "^6.5.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
+    "@turf/distance": "^6.5.0",
+    "@turf/helpers": "^6.1.4",
+    "axios": "^0.21.4",
+    "axios-cache-adapter": "^2.7.3",
+    "core-js": "^3.8.3",
+    "firebase": "^8.10.1",
+    "gmap-vue": "^1.5.0",
+    "random-position-in-polygon": "^1.0.6",
+    "register-service-worker": "^1.7.2",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
+    "vue-clipboard2": "^0.3.3",
+    "vue-country-flag": "^2.3.2",
+    "vue-i18n": "^8.27.2",
+    "vue-router": "^3.5.4",
+    "vuetify": "^2.6.7",
+    "vuex": "^3.6.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@stryker-mutator/core": "^6.0.2",
+    "@stryker-mutator/jest-runner": "^6.1.2",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-pwa": "~5.0.8",
+    "@vue/cli-plugin-unit-jest": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/test-utils": "^1.1.2",
+    "@vue/vue2-jest": "^27.0.0-alpha.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
+    "cypress": "^10.3.1",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^8.7.1",
+    "jest": "^27.1.0",
+    "jest-google-maps-mock": "^1.0.7",
+    "prettier": "2.7.1",
+    "react-is": "^18.2.0",
+    "sass": "1.32",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.5.1",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.3"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "bugs": {
+    "url": "https://github.com/GeoGuess/Geoguess/issues"
+  },
+  "homepage": "https://github.com/GeoGuess/Geoguess#readme",
+  "keywords": [
+    "game",
+    "geography",
+    "educational-game",
+    "multiplayer-game",
+    "street-view"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GeoGuess/GeoGuess.git"
+  }
 }
