Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,4 @@
 files:
   - source: src/lang/locale/en.json
     translation: /**/src/lang/locale/%two_letters_code%.json
-    export_only_approved: true
-commit_message: "[ci skip]"
+commit_message: '[ci skip]'
