--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -17,8 +17,8 @@ body:
   - type: textarea
     attributes:
       label: To Reproduce
-      description: Steps to reproduce the behavior:
-      placeholder: | 
+      description:       | 
+       Steps to reproduce the behavior:
         1. Go to '...'
         2. Click on '....'
         3. Scroll down to '....'
