--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -8,21 +8,23 @@ body:
     attributes:
       value: |
         Thanks for taking the time to fill out this bug report!
+        
   - type: textarea
     attributes:
       label: Describe the bug
       description: A clear and concise description of what the bug is.
     validations:
       required: true
-  - type: textarea
+      
+ - type: markdown
     attributes:
-      label: To Reproduce
-      description:       | 
+      value: |
        Steps to reproduce the behavior:
         1. Go to '...'
         2. Click on '....'
         3. Scroll down to '....'
         4. See error
+  - type: textarea
     validations:
       required: true
 
