--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -28,6 +28,7 @@ body:
           
   - type: textarea
     validations:
+      label: To Reproduce
       required: true
   - type: textarea
     attributes:
