--- a/.github/workflows/ci-mutation-testing.yml
+++ b/.github/workflows/ci-mutation-testing.yml
@@ -10,12 +10,12 @@ jobs:
 
     mutation:
         env:
-            VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
-            VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-            VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-            VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-            VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-            VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+            VITE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
+            VITE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+            VITE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+            VITE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+            VITE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+            VITE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
         runs-on: ubuntu-latest
         steps:
             - name: Set git to use LF
