--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,15 @@ services:
     build: .
     # image:
     environment:
-      #- VUE_APP_PUBLIC_PATH=/
-      - VUE_APP_API_KEY=myapi
-      #- VUE_APP_FIREBASE_API_KEY=myapi
-      #- VUE_APP_FIREBASE_PROJECT_ID=myid
-      #- VUE_APP_FIREBASE_MESSAGING_SENDER_ID=senderid
-      #- VUE_APP_FIREBASE_APP_ID=appid
-      #- VUE_APP_FIREBASE_MEASUREMENT_ID=measurment
-      #- VUE_APP_FIREBASE_AUTH_DOMAIN=auth
-      #- VUE_APP_FIREBASE_DATABASE_URL=db
-      #- VUE_APP_STORAGE_BUCKET=bucket
+      #- VITE_APP_PUBLIC_PATH=/
+      - VITE_APP_API_KEY=myapi
+      #- VITE_APP_FIREBASE_API_KEY=myapi
+      #- VITE_APP_FIREBASE_PROJECT_ID=myid
+      #- VITE_APP_FIREBASE_MESSAGING_SENDER_ID=senderid
+      #- VITE_APP_FIREBASE_APP_ID=appid
+      #- VITE_APP_FIREBASE_MEASUREMENT_ID=measurment
+      #- VITE_APP_FIREBASE_AUTH_DOMAIN=auth
+      #- VITE_APP_FIREBASE_DATABASE_URL=db
+      #- VITE_APP_STORAGE_BUCKET=bucket
     ports:
       - 3000:80
