--- a/netlify.toml
+++ b/netlify.toml
@@ -3,15 +3,15 @@
   publish = "dist"
 
 [template.environment]
-  VUE_APP_API_KEY = "YOUR_GOOGLE_MAPS_API_KEY"
-  VUE_APP_FIREBASE_API_KEY = "YOUR_FIREBASE_API_KEY"
-  VUE_APP_FIREBASE_AUTH_DOMAIN = "YOUR_FIREBASE_FIREBASE_AUTH_DOMAIN"
-  VUE_APP_FIREBASE_DATABASE_URL = "YOUR_FIREBASE_FIREBASE_DATABASE_URL"
-  VUE_APP_FIREBASE_PROJECT_ID = "YOUR_FIREBASE_FIREBASE_PROJECT_ID"
-  VUE_APP_STORAGE_BUCKET = "YOUR_FIREBASE_STORAGE_BUCKET"
-  VUE_APP_FIREBASE_MESSAGING_SENDER_ID = "YOUR_FIREBASE_MESSAGING_SENDER_ID"
-  VUE_APP_FIREBASE_APP_ID = "YOUR_FIREBASE_APP_ID"
-  VUE_APP_FIREBASE_MEASUREMENT_ID = "YOUR_FIREBASE_MEASUREMENT_ID"
+  VITE_APP_API_KEY = "YOUR_GOOGLE_MAPS_API_KEY"
+  VITE_APP_FIREBASE_API_KEY = "YOUR_FIREBASE_API_KEY"
+  VITE_APP_FIREBASE_AUTH_DOMAIN = "YOUR_FIREBASE_FIREBASE_AUTH_DOMAIN"
+  VITE_APP_FIREBASE_DATABASE_URL = "YOUR_FIREBASE_FIREBASE_DATABASE_URL"
+  VITE_APP_FIREBASE_PROJECT_ID = "YOUR_FIREBASE_FIREBASE_PROJECT_ID"
+  VITE_APP_STORAGE_BUCKET = "YOUR_FIREBASE_STORAGE_BUCKET"
+  VITE_APP_FIREBASE_MESSAGING_SENDER_ID = "YOUR_FIREBASE_MESSAGING_SENDER_ID"
+  VITE_APP_FIREBASE_APP_ID = "YOUR_FIREBASE_APP_ID"
+  VITE_APP_FIREBASE_MEASUREMENT_ID = "YOUR_FIREBASE_MEASUREMENT_ID"
 
 [[redirects]]
   from = "/*"
