--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "test:e2e": "cypress run",
     "cypress": "cypress",
-    "test": "npm run lint && npm run test:e2e",
+    "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:mutation": "cross-env NODE_OPTIONS=--unhandled-rejections=warn NODE_ENV=test stryker run"
   },
   "dependencies": {
