--- a/package.json
+++ b/package.json
@@ -45,16 +45,17 @@
     "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@stryker-mutator/core": "^7.1.1",
     "@stryker-mutator/vitest-runner": "^7.1.1",
     "@vue/test-utils": "^1.1.2",
     "cross-env": "^7.0.3",
-    "cypress": "^12.17.3",
+    "cypress": "^13.0.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.7.1",
-    "prettier": "3.0.1",
+    "prettier": "3.0.3",
     "react-is": "^18.2.0",
     "sass": "1.32",
     "vitest": "^0.34.2",
