--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "random-position-in-polygon": "^1.0.6",
     "register-service-worker": "^1.7.2",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.8",
+    "vite": "^4.5.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vue": "^2.7.14",
+    "vue": "^2.7.15",
     "vue-axios": "^3.5.2",
     "vue-clipboard2": "^0.3.3",
     "vue-country-flag": "^2.3.2",
@@ -46,22 +46,22 @@
   },
   "devDependencies": {
     "@stryker-mutator/core": "^7.1.1",
-    "@stryker-mutator/vitest-runner": "^7.1.1",
+    "@stryker-mutator/vitest-runner": "^7.3.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "@vue/test-utils": "^1.1.2",
+    "@vue/test-utils": "1.3.6",
     "cross-env": "^7.0.3",
     "cypress": "^13.2.0",
-    "eslint": "^8.0.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vitest": "^0.3.9",
     "eslint-plugin-vue": "^8.7.1",
-    "prettier": "3.0.3",
+    "prettier": "3.1.0",
     "react-is": "^18.2.0",
     "sass": "1.32",
-    "vitest": "^0.34.2",
-    "vue-template-compiler": "^2.7.14"
+    "vitest": "^0.34.6",
+    "vue-template-compiler": "^2.7.15"
   },
   "browserslist": [
     "> 1%",
