Update to Vite (#665)
* Doesn't load past home page

* Loads slightly more on home page

* Loads a bit more, buttons don't work

* Working

* Refactor imports

* Fully working

* Removed Jest as it is not Vite compatible

* Update src/lang/index.js

Co-authored-by: Bilel Jegham <BilelJegham@users.noreply.github.com>

* Reverse trailing commas and version number

* Everything but Cypress is working

* Merge branch 'master' of https://github.com/GeoGuess/GeoGuess into GeoGuess-master

* Fix eslint

* Update package.json

Co-authored-by: Bilel Jegham <BilelJegham@users.noreply.github.com>

* Update package.json

Co-authored-by: Bilel Jegham <BilelJegham@users.noreply.github.com>

* Vitest not working yet

* Vitest working a bit more

* Patched jest-google-maps-mock

* Update vite.config.js

* Vitest almost working

* Fixed stryker

* Add @ imports back

* Forgot some

* Update CardRoomMap.spec.js

* Update /store/index.js

* Merge

* fix: package

* fix: lint

* fix: add coverage test

* Fix patch package failure

* Fix ESLint with Vitest

* Update snapshot?

---------

Co-authored-by: Bilel Jegham <BilelJegham@users.noreply.github.com>
Co-authored-by: BilelJegham <contact.bileljegham@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,12 @@ jobs:
             echo "::set-output name=is_MY_SECRET_set::${{ env.MY_SECRET != '' }}"
   integration:
     env:
-      VUE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
-      VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-      VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-      VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-      VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-      VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+      VITE_APP_API_KEY: YOUR_GOOGLE_MAPS_API_KEY
+      VITE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+      VITE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+      VITE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+      VITE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+      VITE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
     strategy:
       matrix:
         os: [ubuntu-latest] # , macos-latest, windows-latest
@@ -60,7 +60,7 @@ jobs:
       run: NODE_ENV=production npm run lint -- --no-fix
 
     - name: Run unit tests
-      run: npm run test:unit
+      run: npm run test:unit -- run --coverage --reporter json
 
     - name: Code coverage
       if:  matrix.os == 'ubuntu-latest'
@@ -109,14 +109,14 @@ jobs:
     needs: [checksecret, integration]
     if: needs.checksecret.outputs.is_MY_SECRET_set == 'true'
     env:
-      VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
-      VUE_APP_FIREBASE_API_KEY:  ${{ secrets.VUE_APP_FIREBASE_API_KEY }}
-      VUE_APP_FIREBASE_APP_ID:  ${{ secrets.VUE_APP_FIREBASE_APP_ID }}
-      VUE_APP_FIREBASE_AUTH_DOMAIN:  ${{ secrets.VUE_APP_FIREBASE_AUTH_DOMAIN }}
-      VUE_APP_FIREBASE_DATABASE_URL:  ${{ secrets.VUE_APP_FIREBASE_DATABASE_URL }}
-      VUE_APP_FIREBASE_MESSAGING_SENDER_ID:  ${{ secrets.VUE_APP_FIREBASE_MESSAGING_SENDER_ID }}
-      VUE_APP_FIREBASE_PROJECT_ID:  ${{ secrets.VUE_APP_FIREBASE_PROJECT_ID }}
-      VUE_APP_STORAGE_BUCKET:  ${{ secrets.VUE_APP_STORAGE_BUCKET }}
+      VITE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
+      VITE_APP_FIREBASE_API_KEY:  ${{ secrets.VITE_APP_FIREBASE_API_KEY }}
+      VITE_APP_FIREBASE_APP_ID:  ${{ secrets.VITE_APP_FIREBASE_APP_ID }}
+      VITE_APP_FIREBASE_AUTH_DOMAIN:  ${{ secrets.VITE_APP_FIREBASE_AUTH_DOMAIN }}
+      VITE_APP_FIREBASE_DATABASE_URL:  ${{ secrets.VITE_APP_FIREBASE_DATABASE_URL }}
+      VITE_APP_FIREBASE_MESSAGING_SENDER_ID:  ${{ secrets.VITE_APP_FIREBASE_MESSAGING_SENDER_ID }}
+      VITE_APP_FIREBASE_PROJECT_ID:  ${{ secrets.VITE_APP_FIREBASE_PROJECT_ID }}
+      VITE_APP_STORAGE_BUCKET:  ${{ secrets.VITE_APP_STORAGE_BUCKET }}
     runs-on: ubuntu-latest
     name: E2E on Ubuntu
     strategy:
@@ -144,12 +144,12 @@ jobs:
   # cypress-edge:    
   #   needs: integration
   #   env:
-  #     VUE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
-  #     VUE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
-  #     VUE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
-  #     VUE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
-  #     VUE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
-  #     VUE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
+  #     VITE_APP_API_KEY:  ${{ secrets.GMAP_API_KEY }}
+  #     VITE_APP_FIREBASE_API_KEY: YOUR_FIREBASE_API_KEY
+  #     VITE_APP_FIREBASE_PROJECT_ID: YOUR_FIREBASE_PROJECT_ID
+  #     VITE_APP_FIREBASE_MESSAGING_SENDER_ID: YOUR_FIREBASE_MESSAGING_SENDER_ID
+  #     VITE_APP_FIREBASE_APP_ID: YOUR_FIREBASE_APP_ID
+  #     VITE_APP_FIREBASE_MEASUREMENT_ID: YOUR_FIREBASE_MEASUREMENT_ID
   #   runs-on: windows-latest
   #   name: E2E on Windows
   #   strategy:
