--- a/package.json
+++ b/package.json
@@ -4,65 +4,64 @@
   "description": "GeoGuess is an open-source geography game with Google Map StreetView.",
   "author": "Bilel Jegham and others",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vue-cli-service test:unit",
+    "serve": "vite serve",
+    "dev": "vite dev",
+    "build": "vite build",
+    "lint": "eslint .",
+    "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vitest",
     "test:e2e": "cypress run",
-    "lint": "vue-cli-service lint",
     "cypress": "cypress",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
-    "test:mutation": "cross-env NODE_OPTIONS=--unhandled-rejections=warn NODE_ENV=test BABEL_ENV=test VUE_CLI_TRANSPILE_BABEL_RUNTIME=true VUE_CLI_BABEL_TARGET_NODE=true VUE_CLI_BABEL_TRANSPILE_MODULES=true stryker run"
+    "test:mutation": "cross-env NODE_OPTIONS=--unhandled-rejections=warn NODE_ENV=test stryker run",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-point-in-polygon": "^6.5.0",
     "@turf/distance": "^6.5.0",
     "@turf/helpers": "^6.1.4",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "axios": "^0.21.4",
     "axios-cache-adapter": "^2.7.3",
-    "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
     "firebase": "^8.10.1",
-    "gmap-vue": "^1.5.0",
+    "gmap-vue": "^3.5.4",
+    "jest-google-maps-mock": "^1.0.7",
+    "jsdom": "^22.1.0",
+    "patch-package": "^8.0.0",
     "random-position-in-polygon": "^1.0.6",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.6.14",
+    "unplugin-vue-components": "^0.25.1",
+    "vite": "^4.5.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "vue": "^2.7.15",
     "vue-axios": "^3.5.2",
     "vue-clipboard2": "^0.3.3",
     "vue-country-flag": "^2.3.2",
     "vue-i18n": "^8.28.2",
+    "vue-i18n-bridge": "^9.2.2",
     "vue-router": "^3.6.5",
     "vuetify": "^2.6.12",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@stryker-mutator/core": "^6.2.3",
-    "@stryker-mutator/jest-runner": "^6.4.0",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-plugin-pwa": "~5.0.8",
-    "@vue/cli-plugin-unit-jest": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
-    "@vue/test-utils": "^1.1.2",
-    "@vue/vue2-jest": "^27.0.0-alpha.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.3",
+    "@stryker-mutator/core": "^7.1.1",
+    "@stryker-mutator/vitest-runner": "^7.3.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vue/test-utils": "1.3.6",
     "cross-env": "^7.0.3",
     "cypress": "^13.2.0",
-    "eslint": "^7.5.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-vitest": "^0.3.9",
     "eslint-plugin-vue": "^8.7.1",
-    "jest": "^27.1.0",
-    "jest-google-maps-mock": "^1.0.7",
-    "prettier": "3.0.3",
+    "prettier": "3.1.0",
     "react-is": "^18.2.0",
     "sass": "1.32",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "^2.5.8",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.3"
+    "vitest": "^0.34.6",
+    "vue-template-compiler": "^2.7.15"
   },
   "browserslist": [
     "> 1%",
