--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn vue-cli-service test:unit",
+    "test:unit": "cross-env NODE_OPTIONS=--unhandled-rejections=warn jest",
     "test:e2e": "cypress run",
     "lint": "vue-cli-service lint",
     "cypress": "cypress",
@@ -25,7 +25,7 @@
     "gmap-vue": "^1.5.0",
     "random-position-in-polygon": "^1.0.6",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.6.14",
+    "vue": "^2.7.0",
     "vue-axios": "^3.5.2",
     "vue-clipboard2": "^0.3.3",
     "vue-country-flag": "^2.3.2",
@@ -41,11 +41,11 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-pwa": "~5.0.8",
-    "@vue/cli-plugin-unit-jest": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/test-utils": "^1.1.2",
-    "@vue/vue2-jest": "^27.0.0-alpha.3",
+    "@vue/vue2-jest": "^29.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "cypress": "^13.11.0",
@@ -53,16 +53,18 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^8.7.1",
-    "jest": "^27.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "jest": "^29.1.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-google-maps-mock": "^1.0.7",
+    "jest-serializer-vue": "^3.1.0",
+    "jest-transform-stub": "^2.0.0",
     "prettier": "3.3.2",
     "react-is": "^18.3.1",
     "sass": "1.32",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.5.8",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.3"
+    "vuetify-loader": "^1.9.2"
   },
   "browserslist": [
     "> 1%",
