--- a/.github/workflows/dependabot-auto.yml
+++ b/.github/workflows/dependabot-auto.yml
@@ -1,7 +1,8 @@
 name: Dependabot auto-merge
 on:
   pull_request_target:
-    types: [review_requested]
+    branches:
+      - 'dependabot/**'
 
 permissions:
   contents: write
