--- a/.github/workflows/ci-mutation-testing.yml
+++ b/.github/workflows/ci-mutation-testing.yml
@@ -2,8 +2,8 @@ name: CI mutation
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: "0 2 * * 0"
+  # schedule:
+  # - cron: "0 2 * * 0"
       
 
 jobs:
